Add an alert if any field is left empty

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class= "form-group">
           <label for="movies">Current Movies</label>
           <select id="movies">
-            <option value="">Select Movie</option>
+            <option value="Not a Movie">Select Movie</option>
             <option value="Star Wars">Star Wars</option>
             <option value="The Revenant">The Revenant</option>
             <option value="Adam Sandler Movie">Adam Sandler Movie</option>
